--- a/style.css
+++ b/style.css
@@ -50,3 +50,22 @@ p {
   font-size: 12px;
   text-decoration: none;
 }
+
+.button {
+  background-color: blueviolet;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  height: 3rem;
+  width: 5rem;
+  font-size: 12px;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.cart-icon{
+  width: 25px;
+  margin-right: 0.5rem;
+}
